--- a/MOHAENG/MOHAENG/Info.plist
+++ b/MOHAENG/MOHAENG/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>WEATHER_KEY</key>
+	<string>$(WEATHER_KEY)</string>
+	<key>KAKAO_MAP_KEY</key>
+	<string>$(KAKAO_API_KEY)</string>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>ko</string>
