--- a/MOHAENG/MOHAENG/Info.plist
+++ b/MOHAENG/MOHAENG/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>WEATHER_KEY</key>
 	<string>$(WEATHER_KEY)</string>
-	<key>KAKAO_MAP_KEY</key>
+	<key>KAKAO_API_KEY</key>
 	<string>$(KAKAO_API_KEY)</string>
 	<key>CFBundleLocalizations</key>
 	<array>
