--- a/MOHAENG/MOHAENG/Info.plist
+++ b/MOHAENG/MOHAENG/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>ONBOARDING_URL</key>
+	<string>$(ONBOARDING_URL)</string>
 	<key>WEATHER_KEY</key>
 	<string>$(WEATHER_KEY)</string>
 	<key>KAKAO_API_KEY</key>
